20% of DJ MVC  (Compound Pattern)

--- a/Compound Pattern/DJ MVC/DJApplication.dproj
+++ b/Compound Pattern/DJ MVC/DJApplication.dproj
@@ -106,6 +106,9 @@
             <Form>ControllerForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="BeatModelIntf.pas"/>
+        <DCCReference Include="BeatObserverIntf.pas"/>
+        <DCCReference Include="BPMObserverIntf.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
