--- a/Compound Pattern/DJ MVC/DJApplication.dproj
+++ b/Compound Pattern/DJ MVC/DJApplication.dproj
@@ -84,6 +84,8 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -102,13 +104,16 @@
             <Form>ViewForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="BeatModelIntf.pas"/>
+        <DCCReference Include="BeatObserverIntf.pas"/>
+        <DCCReference Include="BPMObserverIntf.pas"/>
+        <DCCReference Include="ControllerIntf.pas"/>
+        <DCCReference Include="BeatController.pas"/>
+        <DCCReference Include="BeatModel.pas"/>
         <DCCReference Include="ControllerFrm.pas">
             <Form>ControllerForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="BeatModelIntf.pas"/>
-        <DCCReference Include="BeatObserverIntf.pas"/>
-        <DCCReference Include="BPMObserverIntf.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -129,6 +134,10 @@
                 <Source>
                     <Source Name="MainSource">DJApplication.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k280.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp280.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\DJApplication.exe" Configuration="Debug" Class="ProjectOutput">
