--- a/Proxy Pattern/Gumball Machine - Remote/GumballRPC/GumballRPC.dproj
+++ b/Proxy Pattern/Gumball Machine - Remote/GumballRPC/GumballRPC.dproj
@@ -101,6 +101,7 @@
         <DCCReference Include="StateIntf.pas"/>
         <DCCReference Include="WinnerState.pas"/>
         <DCCReference Include="GumballMachineIntf.pas"/>
+        <DCCReference Include="GumballMachineLocator.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
