Finalized Virtual Proxy

--- a/Proxy Pattern/CD Viewer - Virtual/VirtualProxy.dproj
+++ b/Proxy Pattern/CD Viewer - Virtual/VirtualProxy.dproj
@@ -103,6 +103,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="ImageProxy.pas"/>
+        <DCCReference Include="ImageIntf.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
