--- a/Proxy Pattern/CD Viewer - Virtual/VirtualProxy.dproj
+++ b/Proxy Pattern/CD Viewer - Virtual/VirtualProxy.dproj
@@ -104,6 +104,7 @@
         </DCCReference>
         <DCCReference Include="ImageProxy.pas"/>
         <DCCReference Include="ImageIntf.pas"/>
+        <DCCReference Include="RealImage.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
